--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --content-base build"
   },
   "author": "",
   "license": "ISC",
@@ -22,18 +23,24 @@
     "node-sass": "^3.8.0",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
+    "backbone": "^1.3.3",
     "cheerio": "^0.20.0",
+    "es6-mixins": "^1.0.2",
     "express": "^4.14.0",
+    "flux": "^2.1.1",
     "html-webpack-plugin": "^2.22.0",
+    "jquery": "^3.1.0",
     "material-ui": "^0.15.2",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-iframe": "0.0.4",
+    "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0"
   }
 }
